<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/alertdialog_background">

    <TextView
        android:id="@+id/alertConfirmTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="5dp"
        android:textColor="#000000"
        android:text="@string/alertConfirmTitle"
        android:textSize="30sp"/>
    <TextView
        android:id="@+id/alertConfirmMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="5dp"
        android:textColor="#000000"
        android:text="@string/alertConfirmMessage"
        android:textSize="20sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">
        <Button
            android:id="@+id/alertDialog_fermer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:background="@drawable/alertdialog_fermerbutton"
            android:text="@string/alertConfirm_fermer"/>
    </LinearLayout>

</LinearLayout>

